feat: update deps version before publish

--- a/@xm/event-emitter/package.json
+++ b/@xm/event-emitter/package.json
@@ -21,6 +21,7 @@
     "core-js": "3"
   },
   "devDependencies": {
-    "@xm/story-helper": "file:../story-helper"
-  }
+    "@xm/story-helper": "^0.0.1"
+  },
+  "gitHead": "4bb702e9017235aaa9d98c1efdc337073c6294b3"
 }
