--- a/@xm/prize-wheel/package.json
+++ b/@xm/prize-wheel/package.json
@@ -17,10 +17,11 @@
     "build:watch": "vite build --watch"
   },
   "dependencies": {
-    "@xm/event-emitter": "file:../event-emitter"
+    "@xm/event-emitter": "^0.0.1"
   },
   "peerDependencies": {
     "@babel/runtime-corejs3": "^7.18.9",
     "core-js": "3"
-  }
+  },
+  "gitHead": "4bb702e9017235aaa9d98c1efdc337073c6294b3"
 }
