--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "isolatedModules": true,
     "jsx": "react-jsx"
   },
-  "include": ["@xm"],
+  "include": ["@x_m"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
