--- a/@x_m/event-emitter/package.json
+++ b/@x_m/event-emitter/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.2",
   "author": "xiaomingTang",
   "description": "event emitter",
+  "private": false,
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.es.d.ts",
