--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     ]
   },
   "scripts": {
+    "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "lerna run build",
-    "build:watch": "lerna run build:watch"
+    "build:watch": "lerna run build:watch",
+    "lint": "lerna run lint",
+    "prettier": "prettier --write . --config .prettierrc.json"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.18.9",
@@ -39,7 +42,10 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "husky": "^8.0.1",
     "lerna": "^5.3.0",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4",
@@ -48,13 +54,11 @@
   },
   "TODO": [
     "test",
-    "husky - hooks - pre-commit",
-    "prettier",
-    "storybook"
+    "lint"
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint"
+      "pre-commit": "yarn prettier"
     }
   },
   "prettier": {
