--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build-storybook": "build-storybook",
     "build": "lerna run build",
     "build:watch": "lerna run build:watch",
-    "lint": "lerna run lint",
+    "lint": "eslint @x_m",
     "prettier": "prettier --write . --config .prettierrc.json"
   },
   "dependencies": {
@@ -41,7 +41,14 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lerna": "^5.3.0",
     "lint-staged": "^13.0.3",
@@ -53,7 +60,6 @@
     "vite-dts": "^1.0.4"
   },
   "TODO": [
-    "test",
-    "lint"
+    "test"
   ]
 }
