--- a/@x_m/event-emitter/package.json
+++ b/@x_m/event-emitter/package.json
@@ -5,7 +5,7 @@
   "author": "xiaomingTang",
   "description": "event emitter",
   "private": false,
-  "main": "dist/index.umd.js",
+  "main": "dist/index.es.js",
   "module": "dist/index.es.js",
   "types": "dist/index.es.d.ts",
   "files": [
