--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "xiaoming",
   "version": "0.0.1",
   "description": "packages",
-  "repository": "https://github.com/xiaomingTang/xiaoming.git",
   "author": "xiaomingTang",
   "license": "MIT",
   "private": false,
+  "repository": "https://github.com/xiaomingTang/xiaoming.git",
+  "homepage": "https://github.com/xiaomingTang/xiaoming.git",
   "browserslist": {
     "production": [
       "> 1%",
