--- a/@x_m/story-helper/package.json
+++ b/@x_m/story-helper/package.json
@@ -5,11 +5,10 @@
   "author": "xiaomingTang",
   "description": "story helper",
   "private": false,
-  "main": "dist/index.es.js",
+  "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.es.d.ts",
   "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40x_m/story-helper",
-  "homepage": "https://github.com/xiaomingTang/xiaoming/tree/master/%40x_m/story-helper",
   "files": [
     "src",
     "dist"
