--- a/@x_m/prize-wheel-helper/package.json
+++ b/@x_m/prize-wheel-helper/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@x_m/event-emitter",
+  "name": "@x_m/prize-wheel-helper",
   "license": "MIT",
-  "version": "0.1.1",
+  "version": "0.0.1",
   "author": "xiaomingTang",
-  "description": "event emitter",
+  "description": "prize wheel helper",
   "private": false,
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.es.d.ts",
-  "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40x_m/event-emitter",
+  "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40x_m/prize-wheel-helper",
   "files": [
     "src",
     "dist"
@@ -17,8 +17,15 @@
     "build": "vite build",
     "build:watch": "vite build --watch"
   },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "peerDependencies": {
     "@babel/runtime-corejs3": "^7.18.9",
-    "core-js": "3"
+    "core-js": "3",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@x_m/prize-wheel": "^0.1.2"
   }
 }
