--- a/@x_m/_examples/package.json
+++ b/@x_m/_examples/package.json
@@ -16,7 +16,10 @@
     "@x_m/interact-dom": "^0.1.7",
     "@x_m/prize-wheel": "^0.1.5",
     "@x_m/prize-wheel-helper": "^0.1.5",
-    "lodash": "^4.17.21"
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
+    "react-transition-group": "^4.4.5",
+    "zustand": "^4.0.0"
   },
   "peerDependencies": {
     "@babel/runtime-corejs3": "^7.18.9",
@@ -24,6 +27,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.5",
     "sass": "^1.54.4"
   }
 }
