feat: try to use mui

--- a/@x_m/_examples/package.json
+++ b/@x_m/_examples/package.json
@@ -11,6 +11,10 @@
     "build": "vite build --config vite.config.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
     "@x_m/hooks": "^0.1.7",
     "@x_m/interact": "^0.1.7",
     "@x_m/interact-dom": "^0.1.7",
