feat: 使 eslint 和 prettier 配合得更好

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,17 @@
 {
+  "$schema": "https://json.schemastore.org/prettierrc",
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "arrowParens": "always",
+  "overrides": [
+    {
+      "files": "*.ts",
+      "options": {
+        "parser": "typescript"
+      }
+    }
+  ]
 }
