feat: files duplication

--- a/@x_m/event-emitter/package.json
+++ b/@x_m/event-emitter/package.json
@@ -19,6 +19,7 @@
   },
   "peerDependencies": {
     "@babel/runtime-corejs3": "^7.18.9",
+    "@x_m/type-utils": "^0.1.9",
     "core-js": "3"
   }
 }
