--- a/@x_m/_examples/package.json
+++ b/@x_m/_examples/package.json
@@ -21,8 +21,10 @@
     "@x_m/interact-dom": "^0.1.9",
     "@x_m/prize-wheel": "^0.1.9",
     "@x_m/prize-wheel-helper": "^0.1.9",
+    "@x_m/utils": "^0.1.9",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
+    "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
     "zustand": "^4.0.0"
   },
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@types/react-transition-group": "^4.4.5",
+    "@x_m/type-utils": "^0.1.9",
     "sass": "^1.54.4"
   }
 }
