--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "dev": "cd @x_m/_examples && yarn dev",
+    "dev": "cd @x_m/a-home && yarn dev",
+    "export": "cd @x_m/a-home && yarn build && yarn export",
+    "server": "cd @x_m/a-home/out && python -m http.server",
     "build": "lerna run build",
     "build:watch": "lerna run build:watch",
     "lint": "eslint --fix @x_m",
@@ -58,13 +60,18 @@
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mdx": "^2.0.5",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lerna": "^5.3.0",
+    "lerna-update-wizard": "^1.1.2",
     "lint-staged": "^13.0.3",
+    "next": "^13.0.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
