feat: 重新规划文件结构，先学走，再学跑

--- a/@x_m/a-home/package.json
+++ b/@x_m/a-home/package.json
@@ -20,7 +20,6 @@
     "@mdx-js/react": "^2.1.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
-    "@next/mdx": "^13.0.0",
     "@x_m/event-emitter": "^0.1.9",
     "@x_m/hooks": "^0.1.9",
     "@x_m/interact": "^0.1.9",
@@ -36,6 +35,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
     "server-only": "^0.0.1",
