--- a/@x_m/a-home/tsconfig.json
+++ b/@x_m/a-home/tsconfig.json
@@ -27,7 +27,7 @@
       ],
       "@ROOT/*": [
         "./*"
-      ],
+      ]
     },
     "plugins": [
       {
@@ -39,8 +39,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "@types/**/*.d.ts"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
