feat: use workspaces & move type-utils to devdeps

--- a/@zimi/event-emitter/package.json
+++ b/@zimi/event-emitter/package.json
@@ -19,7 +19,9 @@
   },
   "peerDependencies": {
     "@babel/runtime-corejs3": "^7.18.9",
-    "@zimi/type-utils": "^0.1.9",
     "core-js": "3"
+  },
+  "devDependencies": {
+    "@zimi/type-utils": "^0.1.9"
   }
 }
