--- a/lerna.json
+++ b/lerna.json
@@ -17,5 +17,5 @@
   "version": "0.1.9",
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useNx": false,
-  "useWorkspaces": false
+  "useWorkspaces": true
 }
