--- a/@zimi/interact-dom/package.json
+++ b/@zimi/interact-dom/package.json
@@ -5,6 +5,7 @@
   "author": "xiaomingTang",
   "description": "interact dom",
   "private": false,
+  "sideEffects": false,
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "types": "dist/index.es.d.ts",
