--- a/@zimi/www/package.json
+++ b/@zimi/www/package.json
@@ -30,8 +30,11 @@
     "classnames": "^2.3.2",
     "client-only": "^0.0.1",
     "core-js": "3",
-    "next": "^13.0.0",
+    "html2canvas": "^1.4.1",
+    "lodash-es": "^4.17.21",
+    "next": "^13.0.4",
     "next-pwa": "^5.6.0",
+    "next-query-params": "^4.1.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,13 +43,19 @@
     "react-transition-group": "^4.4.5",
     "server-only": "^0.0.1",
     "swr": "^1.3.0",
+    "toastify-js": "^1.12.0",
+    "use-query-params": "^2.1.2",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/classnames": "^2.3.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-transition-group": "^4.4.5",
+    "@types/toastify-js": "^1.11.1",
     "@vitejs/plugin-react": "^2.0.0",
     "@zimi/type-utils": "^0.1.9",
     "autoprefixer": "^10.4.12",
