--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.18.9",
-    "core-js": "3"
+    "core-js": "3",
+    "eslint-config-next": "^13.0.4",
+    "next": "^13.0.4"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.18.9",
@@ -63,7 +65,6 @@
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
@@ -74,7 +75,6 @@
     "lerna": "^5.3.0",
     "lerna-update-wizard": "^1.1.2",
     "lint-staged": "^13.0.3",
-    "next": "^13.0.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
