--- a/@zimi/www/package.json
+++ b/@zimi/www/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^2.1.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@next/mdx": "^13.0.4",
     "@zimi/event-emitter": "^0.1.9",
     "@zimi/hooks": "^0.1.9",
     "@zimi/interact": "^0.1.9",
@@ -34,6 +35,7 @@
     "loader-utils": "^3.2.1",
     "lodash-es": "^4.17.21",
     "next": "^13.0.4",
+    "next-mdx-remote": "^4.2.0",
     "next-pwa": "^5.6.0",
     "next-query-params": "^4.1.0",
     "normalize.css": "^8.0.1",
