--- a/@zimi/www/package.json
+++ b/@zimi/www/package.json
@@ -31,6 +31,8 @@
     "classnames": "^2.3.2",
     "client-only": "^0.0.1",
     "core-js": "3",
+    "dayjs": "^1.11.6",
+    "github-markdown-css": "^5.1.0",
     "html2canvas": "^1.4.1",
     "loader-utils": "^3.2.1",
     "lodash-es": "^4.17.21",
