--- a/@zimi/www/package.json
+++ b/@zimi/www/package.json
@@ -40,6 +40,7 @@
     "next-mdx-remote": "^4.2.0",
     "next-pwa": "^5.6.0",
     "next-query-params": "^4.1.0",
+    "next-seo": "^5.14.1",
     "normalize.css": "^8.0.1",
     "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
@@ -49,6 +50,7 @@
     "react-transition-group": "^4.4.5",
     "server-only": "^0.0.1",
     "swr": "^1.3.0",
+    "tailwind-scrollbar": "^2.0.1",
     "toastify-js": "^1.12.0",
     "use-query-params": "^2.1.2",
     "zustand": "^4.1.2"
