feat: manifest 忘了添加 head meta 了...

--- a/@zimi/www/public/manifest.json
+++ b/@zimi/www/public/manifest.json
@@ -2,8 +2,8 @@
   "name": "王小明博客",
   "short_name": "王小明博客",
   "description": "王小明的网络日常",
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "theme_color": "#e8e7e9",
+  "background_color": "#e8e7e9",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
