--- a/@zimi/www/package.json
+++ b/@zimi/www/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@next/mdx": "^13.0.4",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@zimi/event-emitter": "^0.1.9",
     "@zimi/hooks": "^0.1.9",
     "@zimi/interact": "^0.1.9",
@@ -28,6 +29,7 @@
     "@zimi/prize-wheel": "^0.1.9",
     "@zimi/prize-wheel-helper": "^0.1.9",
     "@zimi/utils": "^0.1.9",
+    "autoprefixer": "^10.4.12",
     "classnames": "^2.3.2",
     "client-only": "^0.0.1",
     "core-js": "3",
@@ -42,21 +44,26 @@
     "next-query-params": "^4.1.0",
     "next-seo": "^5.14.1",
     "normalize.css": "^8.0.1",
+    "postcss": "^8.4.18",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.0.0",
     "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
+    "sass": "^1.55.0",
     "server-only": "^0.0.1",
     "swr": "^1.3.0",
     "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.2.4",
     "toastify-js": "^1.12.0",
+    "typescript": "^4.8.4",
     "use-query-params": "^2.1.2",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/classnames": "^2.3.1",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.3",
@@ -64,15 +71,6 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-transition-group": "^4.4.5",
     "@types/toastify-js": "^1.11.1",
-    "@vitejs/plugin-react": "^2.0.0",
-    "@zimi/type-utils": "^0.1.9",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^15.0.0",
-    "sass": "^1.55.0",
-    "scss": "^0.2.4",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.8.4"
+    "@zimi/type-utils": "^0.1.9"
   }
 }
