--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "dev": "cd @zimi/www && yarn dev",
-    "export": "cd @zimi/www && yarn build && yarn export",
-    "server": "cd @zimi/www/out && python -m http.server",
     "build": "lerna run build",
     "build:watch": "lerna run build:watch",
     "lint": "eslint --fix @zimi",
@@ -50,9 +47,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.18.9",
-    "core-js": "3",
-    "eslint-config-next": "^13.0.4",
-    "next": "^13.0.4"
+    "core-js": "3"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.18.9",
@@ -68,7 +63,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-mdx": "^2.0.5",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
