--- a/@zimi/prize-wheel-helper/package.json
+++ b/@zimi/prize-wheel-helper/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
+    "@zimi/event-emitter": "^0.1.10",
     "@zimi/prize-wheel": "^0.1.13"
   }
 }
