--- a/@zimi/prize-wheel-helper/package.json
+++ b/@zimi/prize-wheel-helper/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
+    "@babel/runtime": "^7.20.7",
     "@babel/runtime-corejs3": "^7.18.9",
     "core-js": "3",
     "react": "^18.2.0"
