--- a/@zimi/prize-wheel/package.json
+++ b/@zimi/prize-wheel/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
+    "@babel/runtime": "^7.20.7",
     "@babel/runtime-corejs3": "^7.18.9",
     "core-js": "3"
   },
