--- a/@zimi/story-helper/package.json
+++ b/@zimi/story-helper/package.json
@@ -19,6 +19,7 @@
     "build:watch": "vite build --watch"
   },
   "peerDependencies": {
+    "@babel/runtime": "^7.20.7",
     "@babel/runtime-corejs3": "^7.18.9",
     "core-js": "3"
   }
