--- a/@zimi/utils/package.json
+++ b/@zimi/utils/package.json
@@ -17,5 +17,10 @@
   "scripts": {
     "build": "vite build",
     "build:watch": "vite build --watch"
+  },
+  "peerDependencies": {
+    "@babel/runtime": "^7.20.7",
+    "@babel/runtime-corejs3": "^7.20.7",
+    "core-js": "3"
   }
 }
