--- a/@zimi/hooks/package.json
+++ b/@zimi/hooks/package.json
@@ -25,9 +25,7 @@
     "react": "^18.2.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
-  },
-  "devDependencies": {
+    "lodash": "^4.17.21",
     "@types/lodash": "^4.14.186"
   }
 }
