--- a/@zimi/interact/package.json
+++ b/@zimi/interact/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@zimi/event-emitter": "^0.3.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.186"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.20.7",
