--- a/@zimi/prize-wheel-helper/package.json
+++ b/@zimi/prize-wheel-helper/package.json
@@ -19,7 +19,8 @@
     "build:watch": "vite build --watch"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.186"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.20.7",
@@ -28,7 +29,6 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.186",
     "@zimi/event-emitter": "^0.3.0",
     "@zimi/prize-wheel": "^0.3.0"
   }
