--- a/@zimi/hooks/package.json
+++ b/@zimi/hooks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zimi/hooks",
   "license": "MIT",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "author": "xiaomingTang",
   "description": "hooks",
   "private": false,
@@ -25,7 +25,7 @@
     "react": "^18.2.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "@types/lodash": "^4.14.186"
+    "@types/lodash": "^4.14.186",
+    "lodash": "^4.17.21"
   }
 }
