--- a/@zimi/event-emitter/package.json
+++ b/@zimi/event-emitter/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@zimi/event-emitter",
   "license": "MIT",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "author": "xiaomingTang",
   "description": "event emitter",
   "private": false,
   "sideEffects": false,
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.es.d.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40zimi/event-emitter",
   "files": [
     "src",
@@ -18,12 +18,17 @@
     "build": "vite build",
     "build:watch": "vite build --watch"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@babel/runtime": "^7.20.7",
     "@babel/runtime-corejs3": "^7.18.9",
     "core-js": "3"
   },
   "devDependencies": {
-    "@zimi/type-utils": "^0.7.0"
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@zimi/type-utils": "workspace:*",
+    "vite": "^4.1.1",
+    "vite-plugin-dts": "2.0.0-beta.1"
   }
 }
