--- a/@zimi/interact-dom/package.json
+++ b/@zimi/interact-dom/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@zimi/interact-dom",
   "license": "MIT",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "author": "xiaomingTang",
   "description": "interact dom",
   "private": false,
   "sideEffects": false,
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.es.d.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40zimi/interact-dom",
   "files": [
     "src",
@@ -19,16 +19,20 @@
     "build:watch": "vite build --watch"
   },
   "dependencies": {
-    "@zimi/event-emitter": "^0.7.0",
-    "@zimi/interact": "^0.7.0",
+    "@babel/runtime": "^7.20.7",
+    "@babel/runtime-corejs3": "^7.18.9",
+    "@zimi/event-emitter": "workspace:*",
+    "core-js": "3",
     "gl-matrix": "^3.4.3"
   },
   "peerDependencies": {
-    "@babel/runtime": "^7.20.7",
-    "@babel/runtime-corejs3": "^7.18.9",
-    "core-js": "3"
+    "@zimi/interact": "workspace:*"
   },
   "devDependencies": {
-    "@zimi/story-helper": "^0.7.0"
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "vite": "^4.1.1",
+    "vite-plugin-dts": "2.0.0-beta.1"
   }
 }
