--- a/@zimi/prize-wheel-helper/package.json
+++ b/@zimi/prize-wheel-helper/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@zimi/prize-wheel-helper",
   "license": "MIT",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "author": "xiaomingTang",
   "description": "prize wheel helper",
   "private": false,
   "sideEffects": false,
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.es.d.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40zimi/prize-wheel-helper",
   "files": [
     "src",
@@ -19,17 +19,23 @@
     "build:watch": "vite build --watch"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.186",
-    "lodash": "^4.17.21"
-  },
-  "peerDependencies": {
     "@babel/runtime": "^7.20.7",
     "@babel/runtime-corejs3": "^7.18.9",
     "core-js": "3",
-    "react": "^18.2.0"
+    "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
+    "react": ">=16.8"
   },
   "devDependencies": {
-    "@zimi/event-emitter": "^0.7.0",
-    "@zimi/prize-wheel": "^0.7.0"
+    "@types/lodash": "^4.14.186",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@types/react": "^18.0.28",
+    "@zimi/event-emitter": "workspace:*",
+    "@zimi/prize-wheel": "workspace:*",
+    "vite": "^4.1.1",
+    "vite-plugin-dts": "2.0.0-beta.1"
   }
 }
