--- a/@zimi/type-utils/package.json
+++ b/@zimi/type-utils/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@zimi/type-utils",
   "license": "MIT",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "author": "xiaomingTang",
   "description": "type utils",
   "private": false,
   "sideEffects": false,
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.es.d.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40zimi/type-utils",
   "files": [
     "src",
@@ -17,5 +17,12 @@
   "scripts": {
     "build": "vite build",
     "build:watch": "vite build --watch"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "vite": "^4.1.1",
+    "vite-plugin-dts": "2.0.0-beta.1"
   }
 }
