--- a/@zimi/utils/package.json
+++ b/@zimi/utils/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "@babel/runtime": "^7.20.7",
     "@babel/runtime-corejs3": "^7.18.9",
-    "core-js": "3"
+    "core-js": "3",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@rollup/plugin-babel": "^6.0.3",
+    "@types/lodash-es": "^4.17.6",
     "vite": "^4.1.1",
     "vite-plugin-dts": "2.0.0-beta.1"
   }
