--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,9 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 7.29.0
-          run_install: true
+          run_install: |
+            - recursive: true
+              args: [--no-frozen-lockfile]
 
       - name: create and publish versions
         uses: changesets/action@v1
