--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
 env:
   # https://stackoverflow.com/a/75486166
   CI: true
+
 jobs:
   version:
     timeout-minutes: 15
@@ -28,9 +29,7 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 7.29.0
-          run_install: |
-            - recursive: true
-              args: [--no-frozen-lockfile]
+          run_install: true
 
       - run: pnpm run build
 
