--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,9 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 7.29.0
-          run_install: true
+          run_install: |
+            - recursive: true
+              args: [--no-frozen-lockfile]
 
       - run: pnpm run build
 
