ci: add GITHUB_TOKEN

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,3 +42,5 @@ jobs:
           commit: "chore: update to $GITHUB_REF_NAME"
           title: "chore: update to $GITHUB_REF_NAME"
           publish: pnpm publish --access public -r
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
