--- a/@zimi/interact-dom/package.json
+++ b/@zimi/interact-dom/package.json
@@ -32,6 +32,7 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@rollup/plugin-babel": "^6.0.3",
+    "@zimi/interact": "workspace:*",
     "vite": "^4.1.1",
     "vite-plugin-dts": "2.0.0-beta.1"
   }
