--- a/@zimi/hooks/package.json
+++ b/@zimi/hooks/package.json
@@ -32,7 +32,8 @@
     "@babel/runtime": "^7.20.7",
     "@babel/runtime-corejs3": "^7.18.9",
     "core-js": "3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react": ">=16.8"
   },
   "peerDependencies": {
     "react": ">=16.8"
