--- a/@zimi/prize-wheel-helper/package.json
+++ b/@zimi/prize-wheel-helper/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.0.28",
     "@zimi/event-emitter": "workspace:*",
     "@zimi/prize-wheel": "workspace:*",
+    "react": ">=16.8",
     "vite": "^4.1.1",
     "vite-plugin-dts": "2.0.0-beta.1"
   }
