--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 env:
   # https://stackoverflow.com/a/75486166
   CI: true
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   release:
@@ -17,9 +18,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - name: Chmod
-        run: chmod ug+x .husky/*
 
       - name: Setup node.js
         uses: actions/setup-node@v2
@@ -39,15 +37,16 @@ jobs:
       - name: Build
         run: pnpm run build
 
+      - name: Chmod
+        run: chmod ug+x .husky/*
+
       - name: Create release pull request
         id: changesets
         uses: changesets/action@v1
         with:
           commit: "feat: update version"
           title: "feat: update version"
-          publish: pnpm publish --no-git-checks --access public -r
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          publish: pnpm publish --access public -r
 
       - name: Merge pull request
         id: merge_request
