--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const owner = "$GITHUB_REPOSITORY_OWNER";
+            const owner = "${{ vars.GITHUB_REPOSITORY_OWNER }}";
             const repo = "${{ github.event.repository.name }}";
             const pull_number = "${{ steps.changesets.outputs.pullRequestNumber }}";
             await github.rest.pulls.merge({ owner, repo, pull_number, merge_method: "squash"});
