--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Production deploy
 on:
   push:
     branches:
-      - "release/*"
+      - "master"
 
 env:
   # https://stackoverflow.com/a/75486166
