ci: test changeset config

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           commit: 'feat: update version'
           title: 'feat: update version'
+          version: pnpm changeset version
           publish: pnpm publish --no-git-checks --access public -r
 
       - name: Merge pull request
