--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "prepare": "husky install && bash -c 'chmod ug+x .husky/*'",
     "analyze": "source-map-explorer @zimi/*/dist/*.es.js",
     "analyze-simple": "ts-node --project tsconfig.node.json utils/analyze.ts",
